--- a/main.css
+++ b/main.css
@@ -1,46 +1,54 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-#test2048{
-    font-family: Arial;
-    margin: auto;
-    text-align: center;
-}
-#header{
-    margin: 20px;
-}
-#header a {
-    font-family: Arial;
-    text-decoration: none;
+header{
     display: block;
-    color: white;
-    margin: 20px auto;
-    width: 125px;
-    height: 35px;
+    margin: 0 auto;
+    width: 500px;
     text-align: center;
-    line-height: 40px;
-    background-color: #8f7a66;
-    border-radius: 10px;
-    font-size: 15px;
 }
-#header p{
+header h1{
+    font-size: 60px;
     font-family: Arial;
-    font-size: 20px;
+    font-weight: bold;
 }
-#container{
+header #new_game_button{
+    display: block;
+    margin: 20px auto;
+    width: 100px;
+    padding: 10px 10px;
+    background-color: #8f7a66;
+    font-family: Arial;
+    color: white;
+    border-radius: 10px;
+    text-decoration: none;
+}
+header #new_game_button:hover{
+    background-color: #9f8b77;
+}
+header p{
+    font-family:Arial;
+    font-size: 25px;
+    margin: 20px auto;
+}
+#gird_container{
     width: 460px;
     height: 460px;
+    padding: 20px;
+    margin: 50px auto;
     background-color: #bbada0;
-    margin: 0 auto;
     border-radius: 10px;
     position: relative;
-    padding: 20px;
 }
-.cell{
+.gird_cell{
     width: 100px;
     height: 100px;
     border-radius: 6px;
     background-color: #ccc0b3;
+    position: absolute;
+}
+.number_cell{
+    border-radius: 6px;
+    font-family: Arial;
+    font-size: 60px;
+    line-height: 100px;
+    text-align: center;
     position: absolute;
 }
